// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Modal Content Test description 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-backdrop"
  >
    <div
      class="pf-v6-l-bullseye"
    >
      <div
        aria-labelledby="boxId"
        aria-modal="true"
        class="pf-v6-c-modal-box"
        data-ouia-component-type="PF6/ModalContent"
        data-ouia-safe="true"
        descriptorid="descriptorId"
        id="boxId"
        labelid="labelId"
        role="dialog"
      >
        This is a ModalBox header
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Modal Content Test isOpen 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-backdrop"
  >
    <div
      class="pf-v6-l-bullseye"
    >
      <div
        aria-labelledby="boxId"
        aria-modal="true"
        class="pf-v6-c-modal-box"
        data-ouia-component-type="PF6/ModalContent"
        data-ouia-safe="true"
        descriptorid="descriptorId"
        id="boxId"
        labelid="labelId"
        role="dialog"
      >
        This is a ModalBox header
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Modal Content Test only body 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-backdrop"
  >
    <div
      class="pf-v6-l-bullseye"
    >
      <div
        aria-labelledby="boxId"
        aria-modal="true"
        class="pf-v6-c-modal-box"
        data-ouia-component-type="PF6/ModalContent"
        data-ouia-safe="true"
        descriptorid="descriptorId"
        id="boxId"
        labelid="labelId"
        role="dialog"
      >
        This is a ModalBox header
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Modal Content Test with onclose 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-backdrop"
  >
    <div
      class="pf-v6-l-bullseye"
    >
      <div
        aria-labelledby="boxId"
        aria-modal="true"
        class="pf-v6-c-modal-box pf-m-lg"
        data-ouia-component-type="PF6/ModalContent"
        data-ouia-safe="true"
        descriptorid="descriptorId"
        id="boxId"
        labelid="labelId"
        role="dialog"
      >
        <div
          class="pf-v6-c-modal-box__close"
        >
          <button
            aria-label="Close"
            class="pf-v6-c-button pf-m-plain"
            data-ouia-component-id="OUIA-Generated-Button-plain-:r0:"
            data-ouia-component-type="PF6/Button"
            data-ouia-safe="true"
            type="button"
          >
            <span
              class="pf-v6-c-button__icon"
            >
              <svg
                aria-hidden="true"
                class="pf-v6-svg"
                fill="currentColor"
                height="1em"
                role="img"
                viewBox="0 0  "
                width="1em"
              >
                <path />
              </svg>
            </span>
          </button>
        </div>
        This is a ModalBox header
      </div>
    </div>
  </div>
</DocumentFragment>
`;
